--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: scala
 scala:
   - 2.10.4
   - 2.11.4
+matrix:
+  include:
+    - scala: 2.10.4
+      script: "./sbt clean test"
+
+    - scala: 2.11.4
+      script: "./sbt clean coverage test"
+      after_success: "sbt coveralls"
